# blp-lib

./: .gitignore  Cargo.toml  Makefile  README.md  README.ru.md  build-examples.sh  build-only.sh  build-settings.sh
examples/: decode_dir.c  decode_file.c  encode_dir.c  encode_file.c
include/: blp_lib.h
preview/: PROMPT.md
src/: lib.rs
tests/: run_examples.sh
